<resources>
    <string name="app_name">EMG-Droid - Humanlab</string>
    <string name="bluetooth_icon">EMG-Droid icon</string>
    <string name="unsupported_bluetooth">This device does not support Bluetooth</string>
    <string name="overwrite_warning">This file already exists. Do you want to overwrite it ?</string>
    <string name="start_game">Start Game</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="file_name">File Name</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="load_data">Load Data</string>
    <string name="speed">Speed</string>
    <string name="calibration">Calibration</string>
    <string name="start_calibration">Game</string>
    <string name="calibration_summary">Contract and decontract to fix the min and max value</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="distance">Distance to End</string>
    <string name="_three_digit_default_number">100</string>
    <string name="default_seek_bar_value">1</string>
    <string name="time">Time</string>
    <string name="collisions">Collisions</string>
    <string name="delay_between_obstacles">Delay between obstacles</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="time_holder">%1$s : %2$s</string>
    <string name="final_time">Final Time</string>
    <string name="try_again">Try Again</string>
    <string name="back">Back</string>
    <string name="congratulation">Congratulation !</string>
    <string name="name">Name</string>
    <string name="select">Select</string>
    <string name="create">Create</string>
    <string name="new_player">New Player</string>
    <string name="name_taken_text">This name is already taken. Please choose another one.</string>
    <string name="badges">Badges</string>
    <string name="medal">Medal</string>
    <string name="not_played">Not played yet !</string>
    <string name="endless">Endless</string>
    <string name="level">Level %1$s</string>
    <string name="select_level">Select Level</string>
    <string name="best_time">Best Time</string>
    <string name="best_endless_time">Best Endless Time : %1$s</string>
    <string name="not_played_endless">Not Played Endless Yet</string>
    <string name="asteroids_collision">Asteroids collision :</string>
    <string name="choose_a_profile">Choose a profile</string>

</resources>